fix: unauthorized requests handling

--- a/frontend/src/app/features/service-providers/service-providers-post-preview/service-providers-post-preview.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-post-preview/service-providers-post-preview.component.html
@@ -21,7 +21,9 @@
           </div>
 
           <div style="font-size: 12px; color: var(--lighttext)">
-            <span class="post-date">{{ "SERVICE-PROVIDERS-POST-PREVIEW.POSTED" | translate }}</span>
+            <span class="post-date"
+              >{{ 'SERVICE-PROVIDERS-POST-PREVIEW.POSTED' | translate }}
+            </span>
             <span class="post-date">{{ humanReadableDate }}</span>
           </div>
         </div>
